package multiregion

import (
	"context"
	"encoding/json"
	"fmt"
	"sync"
	"time"

	"github.com/go-redis/redis/v8"
	"go.uber.org/zap"
	"google.golang.org/grpc"
	"google.golang.org/grpc/health/grpc_health_v1"
)

// Region represents a deployment region
type Region struct {
	Name             string                 `json:"name"`
	Location         string                 `json:"location"`
	Status           RegionStatus           `json:"status"`
	Endpoints        RegionEndpoints        `json:"endpoints"`
	Configuration    RegionConfiguration    `json:"configuration"`
	HealthStatus     HealthStatus          `json:"health_status"`
	LastHealthCheck  time.Time             `json:"last_health_check"`
	DataResidency    DataResidencyPolicy   `json:"data_residency"`
	FailoverPriority int                   `json:"failover_priority"`
	Capacity         RegionCapacity        `json:"capacity"`
	Metadata         map[string]interface{} `json:"metadata"`
}

type RegionStatus string

const (
	StatusActive      RegionStatus = "active"
	StatusStandby     RegionStatus = "standby"
	StatusMaintenance RegionStatus = "maintenance"
	StatusFailed      RegionStatus = "failed"
	StatusDraining    RegionStatus = "draining"
)

type RegionEndpoints struct {
	OrchestratorAPI string `json:"orchestrator_api"`
	EngineGRPC     string `json:"engine_grpc"`
	NodeRunnerAPI  string `json:"node_runner_api"`
	WebhookIngress string `json:"webhook_ingress"`
	InternalLB     string `json:"internal_lb"`
	ExternalLB     string `json:"external_lb"`
}

type RegionConfiguration struct {
	DatabaseReplicas      []DatabaseReplica      `json:"database_replicas"`
	MessageQueueCluster   MessageQueueCluster    `json:"message_queue_cluster"`
	StorageConfiguration  StorageConfiguration   `json:"storage_configuration"`
	NetworkConfiguration  NetworkConfiguration   `json:"network_configuration"`
	SecurityConfiguration SecurityConfiguration  `json:"security_configuration"`
	ScalingConfiguration  ScalingConfiguration   `json:"scaling_configuration"`
}

type DatabaseReplica struct {
	Type         string `json:"type"` // primary, read_replica, standby
	Endpoint     string `json:"endpoint"`
	Database     string `json:"database"`
	ReplicationLag time.Duration `json:"replication_lag"`
	HealthStatus string `json:"health_status"`
}

type MessageQueueCluster struct {
	Nodes    []string `json:"nodes"`
	Type     string   `json:"type"` // rabbitmq, nats, kafka
	Replicas int      `json:"replicas"`
	Config   map[string]interface{} `json:"config"`
}

type StorageConfiguration struct {
	PrimaryBucket   string            `json:"primary_bucket"`
	BackupBuckets   []string          `json:"backup_buckets"`
	ReplicationMode string            `json:"replication_mode"` // sync, async, geo
	Encryption      EncryptionConfig  `json:"encryption"`
	Retention       RetentionPolicy   `json:"retention"`
}

type NetworkConfiguration struct {
	VPCId           string            `json:"vpc_id"`
	Subnets         []string          `json:"subnets"`
	SecurityGroups  []string          `json:"security_groups"`
	LoadBalancers   []LoadBalancer    `json:"load_balancers"`
	CDNConfiguration CDNConfiguration `json:"cdn_configuration"`
}

type SecurityConfiguration struct {
	CertificateARN    string            `json:"certificate_arn"`
	KMSKeyId         string            `json:"kms_key_id"`
	SecurityPolicies []SecurityPolicy  `json:"security_policies"`
	NetworkACLs      []NetworkACL      `json:"network_acls"`
}

type ScalingConfiguration struct {
	MinInstances     int                    `json:"min_instances"`
	MaxInstances     int                    `json:"max_instances"`
	TargetCPU        int                    `json:"target_cpu"`
	TargetMemory     int                    `json:"target_memory"`
	ScalingPolicies  []AutoScalingPolicy    `json:"scaling_policies"`
	HealthCheckConfig HealthCheckConfig     `json:"health_check_config"`
}

type HealthStatus struct {
	Overall         string                 `json:"overall"` // healthy, degraded, unhealthy
	Services        map[string]ServiceHealth `json:"services"`
	LastUpdated     time.Time              `json:"last_updated"`
	Alerts          []Alert                `json:"alerts"`
	Metrics         HealthMetrics          `json:"metrics"`
}

type ServiceHealth struct {
	Status      string    `json:"status"`
	ResponseTime time.Duration `json:"response_time"`
	ErrorRate   float64   `json:"error_rate"`
	LastCheck   time.Time `json:"last_check"`
}

type DataResidencyPolicy struct {
	Region          string   `json:"region"`
	Country         string   `json:"country"`
	ComplianceZone  string   `json:"compliance_zone"`
	AllowedRegions  []string `json:"allowed_regions"`
	RestrictedData  []string `json:"restricted_data"`
	RetentionRules  []RetentionRule `json:"retention_rules"`
}

type RegionCapacity struct {
	CPU               float64 `json:"cpu"`              // Available CPU cores
	Memory            int64   `json:"memory"`           // Available memory in bytes
	Storage           int64   `json:"storage"`          // Available storage in bytes
	NetworkBandwidth  int64   `json:"network_bandwidth"` // Available bandwidth in bps
	MaxWorkflows      int     `json:"max_workflows"`
	MaxExecutions     int     `json:"max_executions"`
	CurrentLoad       LoadMetrics `json:"current_load"`
}

type LoadMetrics struct {
	CPUUtilization    float64 `json:"cpu_utilization"`
	MemoryUtilization float64 `json:"memory_utilization"`
	ActiveWorkflows   int     `json:"active_workflows"`
	ActiveExecutions  int     `json:"active_executions"`
}

// DeploymentManager manages multi-region deployments
type DeploymentManager struct {
	regions        map[string]*Region
	activeRegion   string
	standbyRegions []string
	redis          *redis.Client
	logger         *zap.Logger
	healthChecker  *HealthChecker
	failoverManager *FailoverManager
	trafficRouter  *TrafficRouter
	dataReplicator *DataReplicator
	mutex          sync.RWMutex
	ctx            context.Context
	cancel         context.CancelFunc
}

// NewDeploymentManager creates a new deployment manager
func NewDeploymentManager(redisClient *redis.Client, logger *zap.Logger) *DeploymentManager {
	ctx, cancel := context.WithCancel(context.Background())
	
	dm := &DeploymentManager{
		regions:      make(map[string]*Region),
		redis:        redisClient,
		logger:       logger,
		ctx:          ctx,
		cancel:       cancel,
	}
	
	dm.healthChecker = NewHealthChecker(dm, logger)
	dm.failoverManager = NewFailoverManager(dm, logger)
	dm.trafficRouter = NewTrafficRouter(dm, logger)
	dm.dataReplicator = NewDataReplicator(dm, logger)
	
	return dm
}

// RegisterRegion registers a new region
func (dm *DeploymentManager) RegisterRegion(region *Region) error {
	dm.mutex.Lock()
	defer dm.mutex.Unlock()
	
	// Validate region configuration
	if err := dm.validateRegionConfiguration(region); err != nil {
		return fmt.Errorf("invalid region configuration: %w", err)
	}
	
	// Store region
	dm.regions[region.Name] = region
	
	// Update Redis with region information
	regionData, _ := json.Marshal(region)
	key := fmt.Sprintf("region:%s", region.Name)
	if err := dm.redis.Set(dm.ctx, key, regionData, 0).Err(); err != nil {
		return fmt.Errorf("failed to store region in Redis: %w", err)
	}
	
	// Set as active if it's the first region
	if dm.activeRegion == "" && region.Status == StatusActive {
		dm.activeRegion = region.Name
	}
	
	dm.logger.Info("Region registered successfully", 
		zap.String("region", region.Name),
		zap.String("status", string(region.Status)))
	
	return nil
}

// GetActiveRegion returns the currently active region
func (dm *DeploymentManager) GetActiveRegion() *Region {
	dm.mutex.RLock()
	defer dm.mutex.RUnlock()
	
	if dm.activeRegion == "" {
		return nil
	}
	
	return dm.regions[dm.activeRegion]
}

// GetRegion returns a specific region by name
func (dm *DeploymentManager) GetRegion(name string) *Region {
	dm.mutex.RLock()
	defer dm.mutex.RUnlock()
	
	return dm.regions[name]
}

// GetAllRegions returns all registered regions
func (dm *DeploymentManager) GetAllRegions() map[string]*Region {
	dm.mutex.RLock()
	defer dm.mutex.RUnlock()
	
	regions := make(map[string]*Region, len(dm.regions))
	for k, v := range dm.regions {
		regions[k] = v
	}
	
	return regions
}

// StartHealthMonitoring begins health monitoring for all regions
func (dm *DeploymentManager) StartHealthMonitoring() error {
	dm.logger.Info("Starting health monitoring for all regions")
	
	go dm.healthChecker.Start()
	go dm.monitorRegionHealth()
	
	return nil
}

// InitiateFailover initiates failover from current active to specified region
func (dm *DeploymentManager) InitiateFailover(targetRegion string, reason string) error {
	dm.mutex.Lock()
	defer dm.mutex.Unlock()
	
	targetReg := dm.regions[targetRegion]
	if targetReg == nil {
		return fmt.Errorf("target region %s not found", targetRegion)
	}
	
	if targetReg.Status != StatusStandby {
		return fmt.Errorf("target region %s is not in standby status", targetRegion)
	}
	
	currentActive := dm.activeRegion
	
	dm.logger.Info("Initiating failover",
		zap.String("from_region", currentActive),
		zap.String("to_region", targetRegion),
		zap.String("reason", reason))
	
	// Execute failover
	if err := dm.failoverManager.ExecuteFailover(currentActive, targetRegion, reason); err != nil {
		return fmt.Errorf("failover execution failed: %w", err)
	}
	
	// Update active region
	dm.activeRegion = targetRegion
	targetReg.Status = StatusActive
	
	// Update previous active to standby if it's still healthy
	if currentRegion := dm.regions[currentActive]; currentRegion != nil {
		if currentRegion.HealthStatus.Overall != "unhealthy" {
			currentRegion.Status = StatusStandby
		}
	}
	
	dm.logger.Info("Failover completed successfully",
		zap.String("new_active_region", targetRegion))
	
	return nil
}

// RouteTraffic routes traffic to appropriate region based on policies
func (dm *DeploymentManager) RouteTraffic(request *TrafficRequest) (*TrafficResponse, error) {
	return dm.trafficRouter.RouteRequest(request)
}

// GetRegionByDataResidency returns appropriate region based on data residency requirements
func (dm *DeploymentManager) GetRegionByDataResidency(tenantId, dataType string) (*Region, error) {
	// Get tenant's data residency requirements
	residencyPolicy, err := dm.getTenantDataResidencyPolicy(tenantId)
	if err != nil {
		return nil, fmt.Errorf("failed to get tenant residency policy: %w", err)
	}
	
	// Find matching region
	for _, region := range dm.regions {
		if dm.matchesResidencyPolicy(region, residencyPolicy, dataType) {
			return region, nil
		}
	}
	
	return nil, fmt.Errorf("no region matches data residency requirements for tenant %s", tenantId)
}

// monitorRegionHealth continuously monitors health of all regions
func (dm *DeploymentManager) monitorRegionHealth() {
	ticker := time.NewTicker(30 * time.Second)
	defer ticker.Stop()
	
	for {
		select {
		case <-dm.ctx.Done():
			return
		case <-ticker.C:
			dm.performHealthChecks()
		}
	}
}

// performHealthChecks checks health of all regions
func (dm *DeploymentManager) performHealthChecks() {
	dm.mutex.RLock()
	regions := make([]*Region, 0, len(dm.regions))
	for _, region := range dm.regions {
		regions = append(regions, region)
	}
	dm.mutex.RUnlock()
	
	for _, region := range regions {
		go dm.checkRegionHealth(region)
	}
}

// checkRegionHealth checks the health of a specific region
func (dm *DeploymentManager) checkRegionHealth(region *Region) {
	healthStatus := &HealthStatus{
		Services:    make(map[string]ServiceHealth),
		LastUpdated: time.Now(),
		Alerts:      []Alert{},
	}
	
	// Check orchestrator service
	if serviceHealth := dm.checkServiceHealth(region.Endpoints.OrchestratorAPI); serviceHealth != nil {
		healthStatus.Services["orchestrator"] = *serviceHealth
	}
	
	// Check engine service
	if serviceHealth := dm.checkGRPCHealth(region.Endpoints.EngineGRPC); serviceHealth != nil {
		healthStatus.Services["engine"] = *serviceHealth
	}
	
	// Check node runner service
	if serviceHealth := dm.checkServiceHealth(region.Endpoints.NodeRunnerAPI); serviceHealth != nil {
		healthStatus.Services["node_runner"] = *serviceHealth
	}
	
	// Determine overall health
	healthStatus.Overall = dm.calculateOverallHealth(healthStatus.Services)
	
	// Update region health status
	dm.mutex.Lock()
	region.HealthStatus = *healthStatus
	region.LastHealthCheck = time.Now()
	dm.mutex.Unlock()
	
	// Handle health changes
	dm.handleHealthChange(region, healthStatus)
}

// checkServiceHealth checks health of HTTP service
func (dm *DeploymentManager) checkServiceHealth(endpoint string) *ServiceHealth {
	// Implementation would make HTTP health check
	return &ServiceHealth{
		Status:      "healthy",
		ResponseTime: 50 * time.Millisecond,
		ErrorRate:   0.01,
		LastCheck:   time.Now(),
	}
}

// checkGRPCHealth checks health of gRPC service
func (dm *DeploymentManager) checkGRPCHealth(endpoint string) *ServiceHealth {
	ctx, cancel := context.WithTimeout(dm.ctx, 5*time.Second)
	defer cancel()
	
	conn, err := grpc.DialContext(ctx, endpoint, grpc.WithInsecure())
	if err != nil {
		return &ServiceHealth{
			Status:    "unhealthy",
			LastCheck: time.Now(),
		}
	}
	defer conn.Close()
	
	client := grpc_health_v1.NewHealthClient(conn)
	start := time.Now()
	
	resp, err := client.Check(ctx, &grpc_health_v1.HealthCheckRequest{})
	responseTime := time.Since(start)
	
	status := "unhealthy"
	if err == nil && resp.Status == grpc_health_v1.HealthCheckResponse_SERVING {
		status = "healthy"
	}
	
	return &ServiceHealth{
		Status:      status,
		ResponseTime: responseTime,
		LastCheck:   time.Now(),
	}
}

// calculateOverallHealth calculates overall health from service healths
func (dm *DeploymentManager) calculateOverallHealth(services map[string]ServiceHealth) string {
	if len(services) == 0 {
		return "unknown"
	}
	
	healthyCount := 0
	for _, service := range services {
		if service.Status == "healthy" {
			healthyCount++
		}
	}
	
	healthPercentage := float64(healthyCount) / float64(len(services))
	
	if healthPercentage >= 0.8 {
		return "healthy"
	} else if healthPercentage >= 0.5 {
		return "degraded"
	} else {
		return "unhealthy"
	}
}

// handleHealthChange handles changes in region health
func (dm *DeploymentManager) handleHealthChange(region *Region, newHealth *HealthStatus) {
	// If active region becomes unhealthy, initiate failover
	if region.Name == dm.activeRegion && newHealth.Overall == "unhealthy" {
		dm.logger.Warn("Active region is unhealthy, initiating automatic failover",
			zap.String("region", region.Name))
		
		// Find best standby region for failover
		if standbyRegion := dm.findBestStandbyRegion(); standbyRegion != nil {
			go dm.InitiateFailover(standbyRegion.Name, "automatic failover - active region unhealthy")
		}
	}
	
	// Generate alerts for degraded services
	for serviceName, service := range newHealth.Services {
		if service.Status != "healthy" {
			alert := Alert{
				Type:        "service_unhealthy",
				Severity:    "warning",
				Region:      region.Name,
				Service:     serviceName,
				Message:     fmt.Sprintf("Service %s in region %s is %s", serviceName, region.Name, service.Status),
				Timestamp:   time.Now(),
			}
			newHealth.Alerts = append(newHealth.Alerts, alert)
		}
	}
}

// findBestStandbyRegion finds the best standby region for failover
func (dm *DeploymentManager) findBestStandbyRegion() *Region {
	var bestRegion *Region
	bestPriority := -1
	
	for _, region := range dm.regions {
		if region.Status == StatusStandby && 
		   region.HealthStatus.Overall == "healthy" &&
		   region.FailoverPriority > bestPriority {
			bestRegion = region
			bestPriority = region.FailoverPriority
		}
	}
	
	return bestRegion
}

// validateRegionConfiguration validates region configuration
func (dm *DeploymentManager) validateRegionConfiguration(region *Region) error {
	if region.Name == "" {
		return fmt.Errorf("region name is required")
	}
	
	if region.Endpoints.OrchestratorAPI == "" {
		return fmt.Errorf("orchestrator API endpoint is required")
	}
	
	if region.Endpoints.EngineGRPC == "" {
		return fmt.Errorf("engine gRPC endpoint is required")
	}
	
	// Additional validation...
	return nil
}

// getTenantDataResidencyPolicy gets data residency policy for tenant
func (dm *DeploymentManager) getTenantDataResidencyPolicy(tenantId string) (*DataResidencyPolicy, error) {
	// Implementation would fetch from database or cache
	return &DataResidencyPolicy{
		Region:         "us-east-1",
		Country:        "US",
		ComplianceZone: "public",
		AllowedRegions: []string{"us-east-1", "us-west-2"},
		RestrictedData: []string{"pii", "financial"},
	}, nil
}

// matchesResidencyPolicy checks if region matches residency policy
func (dm *DeploymentManager) matchesResidencyPolicy(region *Region, policy *DataResidencyPolicy, dataType string) bool {
	// Check if region is in allowed list
	for _, allowedRegion := range policy.AllowedRegions {
		if region.Name == allowedRegion {
			return true
		}
	}
	
	// Check compliance zone match
	if region.DataResidency.ComplianceZone == policy.ComplianceZone {
		return true
	}
	
	return false
}

// Supporting types and interfaces
type TrafficRequest struct {
	TenantId      string            `json:"tenant_id"`
	UserId        string            `json:"user_id"`
	RequestType   string            `json:"request_type"`
	DataType      string            `json:"data_type"`
	SourceRegion  string            `json:"source_region"`
	Headers       map[string]string `json:"headers"`
	Payload       []byte            `json:"payload"`
}

type TrafficResponse struct {
	TargetRegion  string            `json:"target_region"`
	Endpoint      string            `json:"endpoint"`
	Headers       map[string]string `json:"headers"`
	RoutingReason string            `json:"routing_reason"`
}

type Alert struct {
	Type        string    `json:"type"`
	Severity    string    `json:"severity"`
	Region      string    `json:"region"`
	Service     string    `json:"service"`
	Message     string    `json:"message"`
	Timestamp   time.Time `json:"timestamp"`
	Resolved    bool      `json:"resolved"`
}

type HealthMetrics struct {
	Uptime            time.Duration `json:"uptime"`
	RequestsPerSecond float64       `json:"requests_per_second"`
	AverageLatency    time.Duration `json:"average_latency"`
	ErrorRate         float64       `json:"error_rate"`
}

// Additional supporting types that would be implemented
type HealthChecker struct {
	manager *DeploymentManager
	logger  *zap.Logger
}

type FailoverManager struct {
	manager *DeploymentManager
	logger  *zap.Logger
}

type TrafficRouter struct {
	manager *DeploymentManager
	logger  *zap.Logger
}

type DataReplicator struct {
	manager *DeploymentManager
	logger  *zap.Logger
}

// Placeholder implementations
func NewHealthChecker(dm *DeploymentManager, logger *zap.Logger) *HealthChecker {
	return &HealthChecker{manager: dm, logger: logger}
}

func (hc *HealthChecker) Start() {
	// Implementation
}

func NewFailoverManager(dm *DeploymentManager, logger *zap.Logger) *FailoverManager {
	return &FailoverManager{manager: dm, logger: logger}
}

func (fm *FailoverManager) ExecuteFailover(from, to, reason string) error {
	// Implementation would execute actual failover procedures
	return nil
}

func NewTrafficRouter(dm *DeploymentManager, logger *zap.Logger) *TrafficRouter {
	return &TrafficRouter{manager: dm, logger: logger}
}

func (tr *TrafficRouter) RouteRequest(req *TrafficRequest) (*TrafficResponse, error) {
	// Implementation would route based on various factors
	return &TrafficResponse{
		TargetRegion:  "us-east-1",
		Endpoint:      "https://api.us-east-1.n8n-work.com",
		RoutingReason: "data residency policy",
	}, nil
}

func NewDataReplicator(dm *DeploymentManager, logger *zap.Logger) *DataReplicator {
	return &DataReplicator{manager: dm, logger: logger}
}

// Additional types for completeness
type LoadBalancer struct {
	Type     string `json:"type"`
	Endpoint string `json:"endpoint"`
	Config   map[string]interface{} `json:"config"`
}

type CDNConfiguration struct {
	Provider     string `json:"provider"`
	Distribution string `json:"distribution"`
	Origins      []string `json:"origins"`
}

type SecurityPolicy struct {
	Name   string `json:"name"`
	Type   string `json:"type"`
	Config map[string]interface{} `json:"config"`
}

type NetworkACL struct {
	Name  string `json:"name"`
	Rules []ACLRule `json:"rules"`
}

type ACLRule struct {
	Action    string `json:"action"`
	Protocol  string `json:"protocol"`
	Source    string `json:"source"`
	Destination string `json:"destination"`
	Ports     []int  `json:"ports"`
}

type AutoScalingPolicy struct {
	Name        string `json:"name"`
	MetricName  string `json:"metric_name"`
	Threshold   float64 `json:"threshold"`
	ScaleAction string `json:"scale_action"`
	Cooldown    time.Duration `json:"cooldown"`
}

type HealthCheckConfig struct {
	Interval    time.Duration `json:"interval"`
	Timeout     time.Duration `json:"timeout"`
	HealthyThreshold   int `json:"healthy_threshold"`
	UnhealthyThreshold int `json:"unhealthy_threshold"`
}

type EncryptionConfig struct {
	Algorithm string `json:"algorithm"`
	KeyId     string `json:"key_id"`
	Enabled   bool   `json:"enabled"`
}

type RetentionPolicy struct {
	Days    int    `json:"days"`
	Action  string `json:"action"`
	Archive bool   `json:"archive"`
}

type RetentionRule struct {
	DataType string `json:"data_type"`
	Duration time.Duration `json:"duration"`
	Action   string `json:"action"`
}
